--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Hi, {{user.email}}!</h1>
-{% for post in posts %}
-<div><p>{{post.author.email}} says: <b>{{post.body}}</b></p></div>
-{% endfor %}
+{% filter markdown %}
+{{ content }}
+{% endfilter %}
 {% endblock %}
