--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,12 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
+{% block title %}This is an example page{% endblock %}
+
+{% block navbar %}
+<div class="navbar navbar-fixed-top">
+  <!-- ... -->
+</div>
+{% endblock %}
+
 {% block content %}
-{% filter markdown %}
-{{ content }}
-{% endfilter %}
+  <h1>Hello, Bootstrap</h1>
 {% endblock %}
