--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 {{super()}}
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/post.css">
 {% endblock %}
 
 {% block main %}
@@ -15,6 +15,6 @@
 {{super()}}
 <script src="bower_components/jquery-autosize/jquery.autosize.min.js"></script>
 <script src="bower_components/jquery-textrange/jquery-textrange.min.js"></script>
-<script src="js/index.js"></script>
+<script src="js/post.js"></script>
 {% endblock %}
 
