--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 {% block head %}
 {{super()}}
 {{fixes.ie8()}}
-<link rel="stylesheet" type="text/css" href="css/base.css">
+<link rel="stylesheet" type="text/css" href="/css/base.css">
 {% endblock %}
 
 {% block content %}
