--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -17,5 +17,6 @@
 <script src="/bower_components/jquery-autosize/jquery.autosize.min.js"></script>
 <script src="/bower_components/jquery-textrange/jquery-textrange.min.js"></script>
 <script src="/js/post.js"></script>
+<script>$('textarea#main-editor').textrange('setcursor', {{ cursor }});</script>
 {% endblock %}
 
