--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,5 +25,10 @@
         <div class="col-md-8 max-height">{% block main %}{% endblock %}</div>
         <div class="col-md-2 max-height"></div>
     </div>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">{% block footer %}{% endblock %}</div>
+        <div class="col-md-2"></div>
+    </div>
 </div>
 {% endblock %}
