--- a/app/static/css/post.css
+++ b/app/static/css/post.css
@@ -8,8 +8,12 @@
     -moz-box-shadow: none;
     box-shadow: none;
     width:100%;
-    height:100%; 
+    min-height:75%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+}
+
+#footer {
+    height: 35px;
 }
